Add upload avatar api (#76)
* update libs to publish swagger ui

* add api to upload avatar for current user

* update api docs

* set storage bucket to env

* update README
