# consumer/src/main/resources/static/swagger.yaml
@@ -77,6 +77,47 @@ paths:
                     example: success
                   data:
                     $ref: "#/components/schemas/UserPreference"
+    post:
+      tags:
+        - User
+      summary: Update current user info using file
+      description: Upload corresponding file to cloud, and update current user info if necessary. Return data related to uploaded file
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              required: [field, files]
+              properties:
+                field:
+                  type: string
+                  enum: [AVATAR]
+                files:
+                  type: array
+                  items:
+                    type: string
+                    format: binary
+      responses:
+        "200":
+          description: On success
+          content:
+            application/json:
+              schema:
+                type: object
+                required: [ code, message ]
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                    example: 0
+                  message:
+                    type: string
+                    example: success
+                  data:
+                    $ref: "#/components/schemas/UserFileUpload"
     delete:
       tags:
         - User
@@ -129,10 +170,7 @@ components:
           type: boolean
         gender:
           type: string
-          enum:
-            - Male
-            - Female
-            - Other
+          enum: [MALE, FEMALE, OTHER]
         preferences:
           $ref: "#/components/schemas/UserPreference"
     UserPreference:
@@ -140,3 +178,12 @@ components:
       properties:
         collectAndUsePersonalInfo:
           type: boolean
+    UserFileUpload:
+      type: object
+      properties:
+        path:
+          type: string
+        size:
+          type: number
+        md5:
+          type: string
